; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/initdb/extr_initdb.c_setup_auth.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/initdb/extr_initdb.c_setup_auth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@setup_auth.pg_authid_setup = internal constant [2 x i8*] [i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [39 x i8] c"REVOKE ALL on pg_authid FROM public;\0A\0A\00", align 1
@superuser_password = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [39 x i8] c"ALTER USER \22%s\22 WITH PASSWORD E'%s';\0A\0A\00", align 1
@username = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @setup_auth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_auth(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8**, align 8
  store i32* %0, i32** %2, align 8
  store i8** getelementptr inbounds ([2 x i8*], [2 x i8*]* @setup_auth.pg_authid_setup, i64 0, i64 0), i8*** %3, align 8
  br label %4

4:                                                ; preds = %12, %1
  %5 = load i8**, i8*** %3, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %4
  %9 = load i8**, i8*** %3, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = call i32 @PG_CMD_PUTS(i8* %10)
  br label %12

12:                                               ; preds = %8
  %13 = load i8**, i8*** %3, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i32 1
  store i8** %14, i8*** %3, align 8
  br label %4

15:                                               ; preds = %4
  %16 = load i64, i64* @superuser_password, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load i32, i32* @username, align 4
  %20 = load i64, i64* @superuser_password, align 8
  %21 = call i32 @escape_quotes(i64 %20)
  %22 = call i32 @PG_CMD_PRINTF(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i32 %19, i32 %21)
  br label %23

23:                                               ; preds = %18, %15
  ret void
}

declare dso_local i32 @PG_CMD_PUTS(i8*) #1

declare dso_local i32 @PG_CMD_PRINTF(i8*, i32, i32) #1

declare dso_local i32 @escape_quotes(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
